MediaWiki theme: Fix SelectFileWidget's label visibility in IE11
After the MIME type information is gone, we can handle this issue
differently and let filename `span` act as block element, ensuring both -
label visibility in IE11 and ellipsis as text-overflow on long
filenames

Bug: T127267

--- a/src/themes/mediawiki/widgets.less
+++ b/src/themes/mediawiki/widgets.less
@@ -242,12 +242,17 @@
 		.oo-ui-box-sizing( border-box );
 		display: block;
 		right: @size-icon + 0.5em; // With close, no indicator
-		line-height: 2.3;
 		margin: 0;
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
 		padding-left: 0.5em;
+		line-height: 2.3;
+		white-space: nowrap;
+	}
+
+	// Addressing overflowing (long) filenames
+	&-fileName {
+		display: block;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	&-clearButton {
